Fixed overflow on purchase page

--- a/src/AppBundle/Resources/public/sass/page/checkoutNew.scss
+++ b/src/AppBundle/Resources/public/sass/page/checkoutNew.scss
@@ -5,6 +5,10 @@
 @import "../common/paletteNew";
 @import "checkoutNavNew";
 
+body {
+    overflow-x: hidden;
+}
+
 .checkout {
 
     h1 {
